--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     //    其他依赖
     compile 'com.facebook.fresco:fresco:0.12.0'
     compile 'cn.bmob.android:bmob-sdk:3.5.0'
+    //热更新
+    compile 'com.alipay.euler:andfix:0.3.1@aar'
     //            {exclude group: 'com.google.code.gson'}
     //    compile 'com.google.code.gson:gson:2.7'
 //    compile 'org.xutils:xutils:3.3.36'
